--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"file-type": "^14.5.0",
 		"fs-extra": "^9.0.0",
 		"helmet": "^3.22.0",
-		"imagemin": "^7.0.1",
+		"image-size": "^0.8.3",
 		"imagemin-gifsicle": "ShaunLWM/imagemin-gifsicle",
 		"multer": "^1.4.2",
 		"nanoid": "^3.1.9"
@@ -35,7 +35,6 @@
 		"@types/express": "^4.17.6",
 		"@types/fs-extra": "^9.0.1",
 		"@types/helmet": "^0.0.47",
-		"@types/imagemin": "^7.0.0",
 		"@types/imagemin-gifsicle": "^5.2.0",
 		"@types/multer": "^1.4.3",
 		"@types/nanoid": "^2.1.0",
