--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
+		"execa": "^4.0.2",
 		"express": "^4.17.1",
 		"file-type": "^14.5.0",
 		"fs-extra": "^9.0.0",
