--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"helmet": "^3.22.0",
 		"image-size": "^0.8.3",
 		"imagemin-gifsicle": "ShaunLWM/imagemin-gifsicle",
+		"mongoose": "^5.9.17",
 		"multer": "^1.4.2",
 		"nanoid": "^3.1.9"
 	},
@@ -37,6 +38,7 @@
 		"@types/fs-extra": "^9.0.1",
 		"@types/helmet": "^0.0.47",
 		"@types/imagemin-gifsicle": "^5.2.0",
+		"@types/mongoose": "^5.7.21",
 		"@types/multer": "^1.4.3",
 		"@types/nanoid": "^2.1.0",
 		"concurrently": "^5.2.0"
