--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-ts\" \"yarn serve-debug\""
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"execa": "^4.0.2",
@@ -29,9 +30,11 @@
 		"imagemin-gifsicle": "ShaunLWM/imagemin-gifsicle",
 		"mongoose": "^5.9.17",
 		"multer": "^1.4.2",
-		"nanoid": "^3.1.9"
+		"nanoid": "^3.1.9",
+		"randomcolor": "^0.5.4"
 	},
 	"devDependencies": {
+		"@types/body-parser": "^1.19.0",
 		"@types/cors": "^2.8.6",
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.6",
@@ -41,6 +44,7 @@
 		"@types/mongoose": "^5.7.21",
 		"@types/multer": "^1.4.3",
 		"@types/nanoid": "^2.1.0",
+		"@types/randomcolor": "^0.5.5",
 		"concurrently": "^5.2.0"
 	}
 }
