--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"repository": "git@github.com:ShaunLWM/genor-server.git",
-	"author": "ShaunLWM <shaunlimweimin@gmail.com>",
+	"author": "ShaunLWM",
 	"license": "MIT",
 	"scripts": {
 		"start": "yarn serve",
@@ -24,6 +24,7 @@
 		"execa": "^4.0.2",
 		"express": "^4.17.1",
 		"file-type": "^14.5.0",
+		"filenamify-url": "^2.1.1",
 		"fs-extra": "^9.0.0",
 		"helmet": "^3.22.0",
 		"image-size": "^0.8.3",
