--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@types/body-parser": "^1.19.0",
 		"@types/cors": "^2.8.6",
 		"@types/dotenv": "^8.2.0",
+		"@types/download": "^6.2.4",
 		"@types/express": "^4.17.6",
 		"@types/fs-extra": "^9.0.1",
 		"@types/helmet": "^0.0.47",
@@ -46,6 +47,9 @@
 		"@types/multer": "^1.4.3",
 		"@types/nanoid": "^2.1.0",
 		"@types/randomcolor": "^0.5.5",
-		"concurrently": "^5.2.0"
+		"concurrently": "^5.2.0",
+		"download": "^8.0.0",
+		"node-fetch": "^2.6.0",
+		"poster": "^0.0.9"
 	}
 }
