--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"execa": "^4.0.2",
 		"express": "^4.17.1",
 		"file-type": "^14.6.2",
+		"filenamify": "^4.1.0",
 		"filenamify-url": "^2.1.1",
 		"fs-extra": "^9.0.1",
 		"helmet": "^3.23.0",
