--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"watch-ts": "tsc -w",
 		"debug": "yarn build && yarn watch-debug",
 		"serve-debug": "nodemon --inspect dist/server.js",
-		"watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-ts\" \"yarn serve-debug\""
+		"watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-ts\" \"yarn serve-debug\"",
+		"local-db": "c: && tools/mongodb/current/bin/mongod --dbpath tools/mongodb/renor"
 	},
 	"dependencies": {
 		"body-parser": "^1.19.0",
@@ -24,8 +25,6 @@
 		"execa": "^4.0.2",
 		"express": "^4.17.1",
 		"file-type": "^14.6.2",
-		"filenamify": "^4.1.0",
-		"filenamify-url": "^2.1.1",
 		"fs-extra": "^9.0.1",
 		"helmet": "^3.23.0",
 		"image-size": "^0.8.3",
@@ -33,7 +32,8 @@
 		"mongoose": "^5.9.19",
 		"multer": "^1.4.2",
 		"nanoid": "^3.1.10",
-		"randomcolor": "^0.5.4"
+		"randomcolor": "^0.5.4",
+		"slugify": "^1.4.0"
 	},
 	"devDependencies": {
 		"@types/body-parser": "^1.19.0",
