--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
+		"dayjs": "^1.8.28",
 		"dotenv": "^8.2.0",
 		"execa": "^4.0.2",
 		"express": "^4.17.1",
